[package]
name = "shmem-ipc"
version = "0.2.0"
authors = ["David Henningsson <coding@diwic.se>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["IPC", "memfd", "shmem", "memory"]
documentation = "https://docs.rs/shmem-ipc"
repository = "https://github.com/diwic/shmem-ipc/"
homepage = "https://github.com/diwic/shmem-ipc/"
categories = ["memory-management", "network-programming"]
description = "Untrusted IPC with maximum performance and minimum latency on Linux"

[dependencies]
memfd = "0.4.0"
memmap2 = "0.2.1"
# Zerocopy depends on proc-macro2 and syn, so having "thiserror" as a
# dependency does not add too much compilation time.
thiserror = "1"
zerocopy = "0.3"
libc = "0.2.85"
byteorder = "1.4"

[dev-dependencies]
dbus = "0.9.2"
dbus-crossroads = "0.3"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "sharedring1"
harness = false
